Fix unintended overflow

--- a/assets/base.css
+++ b/assets/base.css
@@ -39,6 +39,11 @@
 
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 .product-card-wrapper .card,
 .contains-card--product {
     --border-radius: var(--product-card-corner-radius);
